[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Commands/Choices.gd" type="Script" id=1]

[node name="Choices" type="PanelContainer"]
margin_right = 309.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 302.0
margin_bottom = 107.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Delete" type="Button" parent="VBoxContainer"]
margin_left = 222.0
margin_right = 295.0
margin_bottom = 30.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 8
size_flags_vertical = 3
text = "- Delete -"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 295.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 8.0
margin_right = 83.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Name"

[node name="Name" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 87.0
margin_right = 295.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.48
caret_blink = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 69.0
margin_right = 295.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_top = 8.0
margin_right = 83.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Value"

[node name="Value" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
margin_left = 87.0
margin_right = 295.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.48
caret_blink = true

[connection signal="pressed" from="VBoxContainer/Delete" to="." method="_on_Delete_pressed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/Name" to="." method="_on_Name_text_changed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer2/Value" to="." method="_on_Description_text_changed"]
